# humanTracking

./: .gitignore  README.md
cpp_mac/: CMakeLists.txt  README.md  main.cpp  sample.cpp
cpp_windows/: readme.md
cpp_windows/humanTracking/: humanTracking.sln
cpp_windows/humanTracking/humanTracking/: DepthSensor.cpp  DepthSensor.cpp.rej  DepthSensor.hpp  Labeling.cpp  Labeling.hpp  Main.cpp  Projection.cpp  Projection.hpp  example.csv  humanTracking.vcxproj  humanTracking.vcxproj.filters  samples_utility.hpp
cpp_windows/humanTracking/humanTracking/param/: matrix.txt
data/: example.csv  sample.csv
model/: sample.ipynb
modeling/: README.md
modeling/analyzing/: 0305_hist_v.ipynb  3d_plot.ipynb  Untitled.ipynb  change.ipynb  converter.ipynb  old_change.ipynb  pylogit_sample.ipynb  sample 2.ipynb  sample.ipynb
modeling/rvo_sample/: example.py
modeling/sample/: pylogit_sample.ipynb  rvo_example.py
python/: CoordinateMapper.py  HogSVM.py  Labeling.py
tracking/: readme.md
tracking/cpp_windows/humanTracking/: DepthSensor.hpp  Detecting.cpp  Detecting.hpp  Main.cpp  Tracking.cpp  Tracking.hpp  humanTracking.vcxproj  humanTracking.vcxproj.filters
tracking/cpp_windows/humanTracking/param/: matrix.txt
tracking/python/: HogSVM.py  ImportData.py  Labeling.py  README.md
